--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,7 @@
 							<div class="logo">
 								<figure>
 									<a href="index.html" class="light-logo">
-										<img src="assets/extra-images/main-logo.png" alt="FoodBakery">
+										<img src="{% static 'logo/foodOnlineLogo.png' %}" alt="FoodBakery">
 									</a>
 								</figure>
 							</div>
