started User Registration form

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block conent %}
+{% block content %}
 	<!-- Main Section Start -->
 	<div class="main-section">
 		<!-- Home Pages Elements Strat -->
