--- a/templates/accounts/registerUser.html
+++ b/templates/accounts/registerUser.html
@@ -69,6 +69,16 @@
                                             </div>
                                         </li>
                                         <li>
+                                            <ul class="errorlist">
+                                                {% for field in form %}
+                                                    {% if field.errors %}
+                                                        {% for error in field.errors %}
+                                                            <li style="color: red;">{{error}}</li>
+                                                        {% endfor %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                                <li style="color:red;">{{form.non_field_errors}}</li>
+                                            </ul>
                                             <div class="row">
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
@@ -76,6 +86,11 @@
                                                             <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
                                                         </div>
                                                     </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                    {% include 'includes/alerts.html' %}
                                                 </div>
                                             </div>
                                         </li>
