--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 	<!-- JAVASCRIPT -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="{% static 'js/modernizr.js' %}"></script>
-	<script src="{% static 'bootstrap.js' %}"></script>
+	<script src="{% static 'js/bootstrap.js' %}"></script>
 
 	<style>
 		body, .main-section p, .mce-content-body p{
