--- a/templates/accounts/forgotpassword.html
+++ b/templates/accounts/forgotpassword.html
@@ -9,12 +9,12 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
 							<div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
 								<div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
-                            <p class="text-center">Order food from your favorite restuarants.</p>
+                            <h4 class="text-center" style="margin-bottom: 0;">FORGOT PASSWORD</h4>
+                            <p class="text-center">Enter your email address to reset your password.</p>
                             <hr>
                             {% include 'includes/alerts.html' %}
                             <div id="restaurant-sets-holder">
-                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'login' %}" enctype="multipart/form-data">
+                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'forgotpassword' %}" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                                         <li>
@@ -27,12 +27,6 @@
                                                                 <input type="email" name="email" placeholder="Enter your email address">
                                                             </div>
                                                         </div>
-                                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                            <div class="field-holder">
-                                                                <label>Password</label>
-                                                                <input type="password" name="password" placeholder="Enter your password">
-                                                            </div>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -43,7 +37,6 @@
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
                                                             <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
-                                                            <a href="{% url 'forgotpassword' %}" class="float-right">Forgot Password</a>
                                                         </div>
                                                     </div>
                                                 </div>
