--- a/templates/accounts/resetpassword.html
+++ b/templates/accounts/resetpassword.html
@@ -9,12 +9,12 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
 							<div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
 								<div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
-                            <p class="text-center">Order food from your favorite restuarants.</p>
+                            <h4 class="text-center" style="margin-bottom: 0;">PASSWORD RESET</h4>
+                            <p class="text-center">Enter your new password.</p>
                             <hr>
                             {% include 'includes/alerts.html' %}
                             <div id="restaurant-sets-holder">
-                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'login' %}" enctype="multipart/form-data">
+                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'resetpassword' %}" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                                         <li>
@@ -23,14 +23,14 @@
                                                     <div class="row">
                                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Email</label>
-                                                                <input type="email" name="email" placeholder="Enter your email address">
+                                                                <label>Password</label>
+                                                                <input type="password" name="password" placeholder="Enter your new password">
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Password</label>
-                                                                <input type="password" name="password" placeholder="Enter your password">
+                                                                <label>Confirm Password</label>
+                                                                <input type="password" name="confirmpassword" placeholder="Confirm your new password">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -42,8 +42,7 @@
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
-                                                            <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
-                                                            <a href="{% url 'forgotpassword' %}" class="float-right">Forgot Password</a>
+                                                            <input type="submit" value="Reset Password" id="btn-next-restaurant-information" class="bgcolor">
                                                         </div>
                                                     </div>
                                                 </div>
